--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,9 +6,11 @@ name: deploy
 on:
   push:
     branches: [ "main" ]
+  workflow_dispatch:
+
 
 jobs:
-  build:
+  deploy:
     runs-on: ubuntu-latest
 
     steps:
