--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
     - name: Setup Node.js environment
       uses: actions/setup-node@v3
       with:
-        node-version: 'lts/*'
+        node-version: 'lts/18'
         cache: 'npm'
 
     - name: Install dependencies
@@ -30,6 +30,10 @@ jobs:
       run: npm run resume
       env:
         JSONRESUME: ${{ secrets.JSONRESUME }}
+    - name: Test123
+      run: |
+        ls -al ./static
+        cat ./static/resume.pdf
     - name: Building Gatsby portfolio website
       run: |
         rm -fr ./.cache
