--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,10 +27,6 @@ jobs:
     - name: Install dependencies
       run: npm ci
     - name: Building JSONResume PDF
-      run: |
-        node ./tools/resume.js
-        ls -la
-        ./node_modules/.bin/resume export --format pdf --theme @jaycanuck/jsonresume-theme-material static/resume.pdf
       env:
         JSONRESUME: ${{ secrets.JSONRESUME }}
     - name: Building Gatsby portfolio website
@@ -42,11 +38,7 @@ jobs:
         JSONRESUME: ${{ secrets.JSONRESUME }}
     - name: Debug
       run: |
-        ls -la ./static
-        ls -la .
-        ls -la ./public
-      env:
-        JSONRESUME: ${{ secrets.JSONRESUME }}
+        pwd && ls -la ./public && ls -la .
     - name: Deploying website
       uses: peaceiris/actions-gh-pages@v3
       with:
