--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,6 +27,7 @@ jobs:
     - name: Install dependencies
       run: npm ci
     - name: Building JSONResume PDF
+      run: npm run resume
       env:
         JSONRESUME: ${{ secrets.JSONRESUME }}
     - name: Building Gatsby portfolio website
@@ -37,8 +38,7 @@ jobs:
       env:
         JSONRESUME: ${{ secrets.JSONRESUME }}
     - name: Debug
-      run: |
-        pwd && ls -la ./public && ls -la .
+      run: pwd && ls -la ./public && ls -la .
     - name: Deploying website
       uses: peaceiris/actions-gh-pages@v3
       with:
