--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,5 +44,5 @@ jobs:
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         cname: jrobitaille.dev
-        publish_dir: ./public
+        publish_dir: ./
         publish_branch: public
